# -seminar-4-first

./: .dockerignore  .gitignore  .markdownlint-cli2.jsonc  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  ryakugo.txt  seminar-4-first.code-workspace  語形成と音韻構造：短縮語形成のメカニズム.md
.github/workflows/: mdlint.yml
.obsidian/: app.json  appearance.json  command-palette.json  community-plugins.json  graph.json  types.json  workspace.json
.obsidian/snippets/: main.css
docs/: index.html  index.md  package.json  pnpm-lock.yaml  style.css  tailwind.config.js
memo/: 2024-04-17.md  PDFから略語データを抜き出す.md  theme.md  先行研究.md  先行研究まとめ.md  抜き出した略語データを前処理.md
memo/先行研究/: 3モーラ複合語略語の生成要因.md  Noisy-channel modelを用いた略語自動推定.md  World wide web を知識源としたカタカナ語省略形の自動生成.md  外来語の形成とその教育.md  外来語略語の形成についての史的研究.md  決定木学習を用いたカタカナ複合語の略語生成システム.md  漢字を中心とした複合語の略語の自動生成.md  短縮語の形成方略に観察される世代差について.md  素性にモーラとシラブルを用いた略語の自動推定.md
memo/授業ごと/: 2024-04-17.md  (+5 more)
paper-abbreviation/: 166.html  171.html  173.html  174.html  177.html  179.html  184.html  185.html  187.html  189.html  193.html  195.html  203.html  211.html  214.html  216.html  220.html  221.html  222.html  224.html  226.html  233.html  234.html  239.html  240.html  241.html  244.html  245.html  246.html  251.html
src/: analyze.ipynb  app.py  compare_model.py  crf-practice.ipynb  exam.ipynb  features.json  features_test.ipynb  get_data.py  light-gbm_sequence.ipynb  mora_wakati.py  openapi.py  practice.ipynb  proba.ipynb  process_data.py  score.py  sequential_classfier.py  sequential_svm.py  svm.ipynb  svm_sequence.ipynb  train.ipynb
templates/: toc.md
外来語略語の形成についての史的研究-html/: 165.html  168.html  172.html  176.html  180.html  181.html  182.html  183.html  190.html  191.html  192.html  197.html  198.html  199.html  200.html  202.html  204.html  208.html  209.html  212.html  215.html  218.html  219.html  227.html  228.html  229.html  232.html  235.html  236.html  243.html  248.html  249.html  250.html  252.html  253.html  abbreviation.json  get_data.ipynb
(+53 files in other folders)
