[tool.poetry]
name = "seminar-4-first"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
jupyter = "^1.0.0"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
pydantic = "^2.7.1"
pykakasi = "^2.2.1"
types-beautifulsoup4 = "^4.12.0.20240511"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
