[tool.poetry]
name = "seminar-4-first"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
jupyter = "^1.0.0"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
pydantic = "^2.7.1"
pykakasi = "^2.2.1"
types-beautifulsoup4 = "^4.12.0.20240511"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
sklearn-crfsuite = {git = "https://github.com/MeMartijn/updated-sklearn-crfsuite.git"}
fastapi = "^0.111.0"
lightgbm = "^4.4.0"
pandas-stubs = "^2.2.2.240603"
optuna = "^3.6.1"
optuna-dashboard = "^0.15.1"


[tool.poetry.group.dev.dependencies]
setuptools = "69.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
